1st commit: Boilerplate HTML and 1st draft of Header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-  <title>My Times - Home</title>
+  <title>My Times</title>
 </head>
 <body>
 <header>
